[gd_scene load_steps=4 format=3 uid="uid://cf88uygfhm3gw"]

[ext_resource type="Texture2D" uid="uid://ftkr7yjdqp5d" path="res://assets/zoimbie1_hold.png" id="1_ex5p7"]
[ext_resource type="Script" path="res://Zombie/Zombie.gd" id="2_7m1uh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_resql"]
size = Vector2(32, 48)

[node name="Zombie" type="Area2D" groups=["Zombie"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("2_7m1uh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_resql")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_ex5p7")

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
